empezando el js

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Restaurante Italiano</title>
 </head>
 <body>
-    
+    <h1>Ristorante Alboccalino</h1>
+    <p></p>
+    <a href="menu.html">Menu</a>
+    <script src="scripts/index.js"></script>
 </body>
 </html>
