--- a/menu.html
+++ b/menu.html
@@ -6,6 +6,7 @@
     <title>Menu</title>
 </head>
 <body>
-    <h1>Aqui la carta con fotos</h1>
+    <h1>Aqui la carta con fotos</h1>.
+    <img src="assets/img/gattaMangiona-pizza-10.jpg" alt="">
 </body>
 </html>
