--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <h1>Ristorante Alboccalino</h1>
     <p></p>
     <a href="menu.html">Menu</a>
-    <script src="scripts/index.js"></script>
+    <script type="module" src="/Proyecto Final/scripts/index.js"></script>
 </body>
 </html>
