--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Restaurante Italiano</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Ristorante Alboccalino</h1>
     <p></p>
     <a href="menu.html">Menu</a>
-    <script type="module" src="/Proyecto Final/scripts/index.js"></script>
-</body>
+    <script src="scripts/productos.js"></script>
+    <script src="scripts/index.js"></script>
+  </body>
 </html>
